--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
 		"prettier-plugin-tailwindcss": "^0.6.10",
 		"sharp": "^0.33.5",
 		"tailwindcss": "4.0.0",
-		"typescript": "^5.7.3",
-		"wrangler": "^3.105.0"
+		"typescript": "^5.7.3"
+	},
+	"devDependencies": {
+		"wrangler": "^4.14.4"
 	}
 }
